--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 													<div class="project-img"></div>
 
 														<div class="project-content">
-															<h3>Project A</h3>
+															<h3>Project AA</h3>
 																<p>Web application for ecommerce prototype.</p>
 
 																	<button class="project-btn">More Detail</button>
