repair html code there are missing code

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<h1>Hi, I'm <strong>Harisman</strong> - $RE</h1>
 								<p><h4>Always adopt the latest technology, specialist in architectures backend design,
 									proven in project management and fluent to critical level projects.</h4></p>
-									<div class=hero-buttons">
+									<div class="hero-buttons">
 										<a href="#portfolio" class="btn btn-primary">Get Started</a>
 											<a href="#footer" class="btn btn-outline">Contact Me</a>
 									</div>
