rechange method api submit mail with formsubmit.co/YOUR_EMAIL exit

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <!-- RIGHT: CONTACT FORM -->
     <div class="footer-section contact">
       <h3>I Would Like To Discuss</h3>
-      <form action="mailto:josearies@msn.com" method="POST" enctype="text/plain">
+      <form action="https://formsubmit.co/josearies@msn.com" method="POST" enctype="text/plain">
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <input type="text" placeholder="Mobile Number" required>
