--- a/index.html
+++ b/index.html
@@ -404,8 +404,9 @@
     <!-- RIGHT: CONTACT FORM -->
     <div class="footer-section contact">
       <h3>I Would Like To Discuss</h3>
-      <form action="https://formsubmit.co/josearies@msn.com" method="POST" enctype="text/plain">
-        <input type="text" placeholder="Your Name" required>
+      <form action="https://api.web3forms.com/submit" method="POST" enctype="text/plain">
+        <input type="hidden" name="access_key" value="28020986-bc6a-40e3-9203-1b2ddc4456bd">
+        <input type="hidden" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <input type="text" placeholder="Mobile Number" required>
         <textarea placeholder="Message..." rows="4" required></textarea>
