add form one things of part form mail

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
       <h3>I Would Like To Discuss</h3>
       <form action="https://api.web3forms.com/submit" method="POST" enctype="text/plain">
         <input type="hidden" name="access_key" value="28020986-bc6a-40e3-9203-1b2ddc4456bd">
-        <input type="hidden" placeholder="Your Name" required>
+        <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <input type="text" placeholder="Mobile Number" required>
         <textarea placeholder="Message..." rows="4" required></textarea>
