rechange method now use formsubmit by js and add line js file

--- a/index.html
+++ b/index.html
@@ -404,8 +404,9 @@
     <!-- RIGHT: CONTACT FORM -->
     <div class="footer-section contact">
       <h3>I Would Like To Discuss</h3>
-      <form action="https://api.web3forms.com/submit" method="POST" enctype="text/plain">
-        <input type="hidden" name="access_key" value="28020986-bc6a-40e3-9203-1b2ddc4456bd">
+      <form action="https://formsubmit.co/ariezjose99@gmail.com" method="POST" enctype="text/plain">
+        <input type="hidden" name="_captcha" value="false">
+				<input type="hidden" name="_template" value="table">
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <input type="text" placeholder="Mobile Number" required>
