--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<nav class="nav-links" role="navigation" aria-label="Main">
 				<a href="#about">About</a>
 					<a href="#portfolio">Portfolio</a>
-						<a href="#news">News</a>
+						<a href="#updates">News</a>
 							<a href="#footer">Contact</a>
 
 		<!-- dark mode icon (desktop) -->
@@ -47,7 +47,7 @@
 			<div id="mobileMenu" class="mobile-menu">
 				<a href="#about">About</a>
 					<a href="#portfolio">Portfolio</a>
-						<a href="#news">News</a>
+						<a href="#updates">News</a>
 							<a href="#footer">Contact</a>
 			</div>
 
@@ -561,9 +561,10 @@
 													<ul class="nav-links">
 														<li><a href="#about">About Me</a></li>
 															<li><a href="#portfolio">Portfolio</a></li>
-																<li><a href="#footer">Contact</a></li>
-																	</ul>
-																</div>
+																<li><a href="#updates">News</a></li>
+																	<li><a href="#footer">Contact</a></li>
+																</ul>
+															</div>
 
 										<!-- RIGHT: CONTACT FORM -->
 											<div class="footer-section contact">
