add link sosmed try1

--- a/index.html
+++ b/index.html
@@ -548,10 +548,10 @@
 												<h3>Follow Me</h3>
 													<div class="social-icons">
 														<a href="#"><i class="fab fa-github"></i></a>
-															<a href="#"><i class="fab fa-linkedin"></i></a>
-																<a href="#"><i class="fab fa-instagram"></i></a>
+															<a href="https://linkedin.com/in/harisman-harisman-112950b2"><i class="fab fa-linkedin"></i></a>
+																<a href="https://www.instagram.com/haries99"><i class="fab fa-instagram"></i></a>
 																	<a href="#"><i class="fab fa-facebook"></i></a>
-																		<a href="#"><i class="fab fa-tiktok"></i></a>
+																		<a href="https://www.tiktok.com/@joseariez"><i class="fab fa-tiktok"></i></a>
 																</div>
 															</div>
 
@@ -559,7 +559,7 @@
 											<div class="footer-section navigation">
 												<h3>Navigation</h3>
 													<ul class="nav-links">
-														<li><a href="#about">About Me</a></li>
+														<li><a href="#about">About</a></li>
 															<li><a href="#portfolio">Portfolio</a></li>
 																<li><a href="#updates">News</a></li>
 																	<li><a href="#footer">Contact</a></li>
