replace label project fiance to fainance

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 													<div class="project-img"></div>
 
 														<div class="project-content">
-															<h3>Trade Fiance System</h3>
+															<h3>Trade Fainance System</h3>
 																<p>system for managing end-to-end export-import processes, from submission, approval, documents, payments, to reporting & compliance.</p>
 								
 																	<button class="project-btn">More Detail</button>
