--- a/index.html
+++ b/index.html
@@ -539,6 +539,19 @@
 
 			</main>  <!-- MAIN CONTENT Akhiran-->
 
+			<!-- Scroll To Top -->
+							<div id="scrollTopBtn">
+								<i class="fas fa-chevron-up"></i>
+							</div>
+							
+							<!-- WhatsApp Floating Button -->
+									<a href="https://wa.me/628XXXXXXXXX"
+										target="_blank"
+											class="whatsapp-float"
+												aria-label="Chat WhatsApp">
+													<i class="fab fa-whatsapp"></i>
+												</a>
+
 						<!-- FOOTER / CONTACT -->
 							<footer class="footer" id="footer">
 									<div class="footer-container">
