--- a/index.html
+++ b/index.html
@@ -540,9 +540,9 @@
 			</main>  <!-- MAIN CONTENT Akhiran-->
 
 			<!-- Scroll To Top -->
-							<div id="scrollTopBtn">
+							<button id="scrollTopBtn" aria-label="Scroll to top">
 								<i class="fas fa-chevron-up"></i>
-							</div>
+									</button>
 							
 							<!-- WhatsApp Floating Button -->
 									<a href="https://wa.me/628XXXXXXXXX"
