--- a/index.html
+++ b/index.html
@@ -540,10 +540,7 @@
 			</main>  <!-- MAIN CONTENT Akhiran-->
 
 			<!-- Scroll To Top -->
-							<button id="scrollTopBtn" aria-label="Scroll to top">
-								<i class="fas fa-chevron-up"></i>
-									</button>
-							
+						
 							<!-- WhatsApp Floating Button -->
 									<a href="https://wa.me/628XXXXXXXXX"
 										target="_blank"
@@ -603,7 +600,7 @@
 																			</footer>
 
 					<!-- MAIN JS -->
-						<script src="js/script.js"></script>
+						<script src="js/script.js" defer></script>
 							<!-- MAIN JS ENDs-->
    
 					<!-- COPYRIGTH -->
