fixing fitur scrollbar icon wa and topdown

--- a/index.html
+++ b/index.html
@@ -540,17 +540,14 @@
 			</main>  <!-- MAIN CONTENT Akhiran-->
 			
 						<!-- Scroll To Top -->
-							<button id="scrollTopBtn" aria-label="Scroll to top">
-								<i class="fas fa-chevron-up"></i>
+							<button id="scrollTopBtn">↑
 									</button>
 							
 							<!-- WhatsApp Floating Button -->
-									<a href="https://wa.me/628XXXXXXXXX"
-										target="_blank"
-											class="whatsapp-float"
-												aria-label="Chat WhatsApp">
-													<i class="fab fa-whatsapp"></i>
-												</a>
+									<a id="whatsappBtn"
+   									href="https://wa.me/628xxxx"
+   										target="_blank"
+   											rel="noopener">WA</a>
 
 						<!-- FOOTER / CONTACT -->
 							<footer class="footer" id="footer">
@@ -608,7 +605,7 @@
    
 					<!-- COPYRIGTH -->
 						<div class="footer-copy">
-							© <span id="copyYearStart">2026</span> – <span id="copyYear"></span> Harisman. All rights reserved.
+							© <span id="copyYear"></span> Harisman. All rights reserved.
 						</div>
 
    
