revisi ke-x fitur wa and topdwon

--- a/index.html
+++ b/index.html
@@ -540,14 +540,19 @@
 			</main>  <!-- MAIN CONTENT Akhiran-->
 			
 						<!-- Scroll To Top -->
-							<button id="scrollTopBtn">↑
-									</button>
-							
-							<!-- WhatsApp Floating Button -->
-									<a id="whatsappBtn"
-   									href="https://wa.me/628xxxx"
-   										target="_blank"
-   											rel="noopener">WA</a>
+									<button id="scrollTopBtn" aria-label="Scroll to top">
+ 													 ↑
+														</button>
+
+								<!-- WhatsApp Floating -->
+										<a
+  											id="whatsappBtn"
+  													href="https://wa.me/628123456789"
+  															target="_blank"
+  																	rel="noopener"
+  																			aria-label="Chat via WhatsApp">
+ 										 												<i class="fab fa-whatsapp"></i>
+																				</a>
 
 						<!-- FOOTER / CONTACT -->
 							<footer class="footer" id="footer">
