--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@
 									<button id="scrollTopBtn" aria-label="Scroll to top">
  													 ↑
 														</button>
+														    <i class="fas fa-chevron-up"></i>
 
 								<!-- WhatsApp Floating -->
 										<a
