--- a/index.html
+++ b/index.html
@@ -540,35 +540,20 @@
 			</main>  <!-- MAIN CONTENT Akhiran-->
 			
 						<!-- Scroll To Top -->
-									<button id="scrollTopBtn">⬆</button>
+									<button id="scrollTopBtn" aria-label="Scroll to top">
+ 													 ↑
+														</button>
+														    <i class="fas fa-chevron-up"></i>
 
-<script>
-  (function () {
-    const btn = document.getElementById("scrollTopBtn");
-
-    if (!btn) {
-      console.error("scrollTopBtn NOT FOUND");
-      return;
-    }
-
-    window.addEventListener("scroll", function () {
-      if (window.scrollY > 200) {
-        btn.style.opacity = "1";
-        btn.style.visibility = "visible";
-        btn.style.transform = "translateY(0)";
-      } else {
-        btn.style.opacity = "0";
-        btn.style.visibility = "hidden";
-        btn.style.transform = "translateY(20px)";
-      }
-    });
-
-    btn.addEventListener("click", function () {
-      window.scrollTo({ top: 0, behavior: "smooth" });
-    });
-  })();
-</script>
-
+								<!-- WhatsApp Floating -->
+										<a
+  											id="whatsappBtn"
+  													href="https://wa.me/628123456789"
+  															target="_blank"
+  																	rel="noopener"
+  																			aria-label="Chat via WhatsApp">
+ 										 												<i class="fab fa-whatsapp"></i>
+																				</a>
 
 						<!-- FOOTER / CONTACT -->
 							<footer class="footer" id="footer">
