--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/myicon.jpeg">
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 	<body>
@@ -606,7 +606,7 @@
 																			</footer>
 
 					<!-- MAIN JS -->
-						<script src="js/script.js" defer></script>
+						<script src="script.js" defer></script>
 							<!-- MAIN JS ENDs-->
    
 					<!-- COPYRIGTH -->
