fixing ok uat to prod icon wa and hide updown

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/myicon.jpeg">
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 	<body>
@@ -231,7 +231,7 @@
 													<div class="project-img"></div>
 
 														<div class="project-content">
-															<h3>Trade Fiance System</h3>
+															<h3>Trade Fainance System</h3>
 																<p>system for managing end-to-end export-import processes, from submission, approval, documents, payments, to reporting & compliance.</p>
 								
 																	<button class="project-btn">More Detail</button>
@@ -540,20 +540,17 @@
 			</main>  <!-- MAIN CONTENT Akhiran-->
 			
 						<!-- Scroll To Top -->
-									<button id="scrollTopBtn" aria-label="Scroll to top">
- 													 ↑
-														</button>
-														    <i class="fas fa-chevron-up"></i>
-
-								<!-- WhatsApp Floating -->
-										<a
-  											id="whatsappBtn"
-  													href="https://wa.me/628123456789"
-  															target="_blank"
-  																	rel="noopener"
-  																			aria-label="Chat via WhatsApp">
- 										 												<i class="fab fa-whatsapp"></i>
-																				</a>
+							<button id="scrollTopBtn" aria-label="Scroll to top">
+								<i class="fas fa-chevron-up"></i>
+									</button>
+							
+							<!-- WhatsApp Floating Button -->
+									<a href="https://wa.me/628XXXXXXXXX"
+										target="_blank"
+											class="whatsapp-float"
+												aria-label="Chat WhatsApp">
+													<i class="fab fa-whatsapp"></i>
+												</a>
 
 						<!-- FOOTER / CONTACT -->
 							<footer class="footer" id="footer">
@@ -606,7 +603,7 @@
 																			</footer>
 
 					<!-- MAIN JS -->
-						<script src="script.js" defer></script>
+						<script src="js/script.js" defer></script>
 							<!-- MAIN JS ENDs-->
    
 					<!-- COPYRIGTH -->
